# libnvme

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  configure.ac  exports  libnvme.pc.in
ci/: build.sh
documentation/: libnvme.doxygen
include/: Makemodule.am
include/libnvme/: nvme.h  nvme_spec.h
lib/common/: Makemodule.am  nvme_arch.h  nvme_atomic.h  nvme_common.c  nvme_common.h  nvme_cpu.c  nvme_cpu.h  nvme_log.c  nvme_log.h  nvme_mem.c  nvme_mem.h  nvme_pci.c  nvme_pci.h  nvme_rwlock.h  nvme_spinlock.h
lib/nvme/: Makemodule.am  nvme.c  nvme_admin.c  nvme_ctrlr.c  nvme_intel.h  nvme_internal.h  nvme_ns.c  nvme_qpair.c  nvme_quirks.c  nvme_request.c
tools/: configure_hugepages.sh
tools/info/: Makemodule.am  nvme_info.c
tools/perf/: Makemodule.am  nvme_perf.c  nvme_perf.h
